src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Additional_Terms_Conditions__c</fullName>
        <label>Other Terms</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bulk_Discount__c</fullName>
        <description>Bulk Discount $</description>
        <inlineHelpText>Bulk Discount $</inlineHelpText>
        <label>Bulk Discount $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bulk_Exchange_Rate__c</fullName>
        <description>Bulk Item Exchange Rate</description>
        <inlineHelpText>Bulk Item Exchange Rate</inlineHelpText>
        <label>Bulk Exchange Rate</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bulk_Freight__c</fullName>
        <description>Bulk Freight $</description>
        <inlineHelpText>Bulk Freight $</inlineHelpText>
        <label>Bulk Freight $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bulk_Tax__c</fullName>
        <description>Bulk Tax $</description>
        <inlineHelpText>Bulk Tax $</inlineHelpText>
        <label>Bulk Tax $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Approval_Status__c</fullName>
        <label>Credit Approval</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Terms__c</fullName>
        <label>Delivery Terms</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Equipment_With_F_L__c</fullName>
        <description>Total Equipment + Freight Cost $
Rollup of quote line item Total Equipment + Freight Cost $</description>
        <inlineHelpText>Total Equipment + Freight Cost $
Rollup of quote line item Total Equipment + Freight Cost $</inlineHelpText>
        <label>Total Equipment + Freight Cost $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grand_Total_E_D_F_T__c</fullName>
        <description>Final Selling Price
Total Equipment Selling Price $ - Total Discount $ + Total Freight $ + Bulk Tax $</description>
        <formula>ROUND(Selling_Total_Equip_Price_FOB__c -  Total_Discount__c +  Total_Freight__c +  Bulk_Tax__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Final Selling Price
Total Equipment Selling Price $ - Total Discount $ + Total Freight $ + Bulk Tax $</inlineHelpText>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Local_Bulk_Discount__c</fullName>
        <description>Local Bulk Discount
Bulk Discount $ * Bulk Exchange Rate</description>
        <formula>ROUND(Bulk_Discount__c *  Bulk_Exchange_Rate__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Bulk Discount
Bulk Discount $ * Bulk Exchange Rate</inlineHelpText>
        <label>Local Bulk Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Bulk_Freight__c</fullName>
        <description>Local Bulk Freight
Bulk Freight $ * Bulk Exchange Rate</description>
        <formula>ROUND(Bulk_Freight__c *  Bulk_Exchange_Rate__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Bulk Freight
Bulk Freight $ * Bulk Exchange Rate</inlineHelpText>
        <label>Local Bulk Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Bulk_Tax__c</fullName>
        <description>Local Bulk Tax
Bulk Tax $ * Bulk Exchange Rate</description>
        <formula>ROUND(Bulk_Tax__c *  Bulk_Exchange_Rate__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Bulk Tax
Bulk Tax $ * Bulk Exchange Rate</inlineHelpText>
        <label>Local Bulk Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Currency__c</fullName>
        <description>Local Currency</description>
        <inlineHelpText>Local Currency</inlineHelpText>
        <label>Local Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Equipment_With_F_L__c</fullName>
        <description>Local Total Equipment + Freight Cost
Rollup of quote line item Local Total Equipment + Freight Cost</description>
        <inlineHelpText>Local Total Equipment + Freight Cost
Rollup of quote line item Local Total Equipment + Freight Cost</inlineHelpText>
        <label>Local Total Equipment + Freight Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Grand_Total_E_D_F_T__c</fullName>
        <description>Local Final Selling Price
Total Equipment Selling Price - Local Total Discount + Local Total Freight + Local Bulk Tax</description>
        <formula>ROUND(Local_Selling_Total_Equip_Price_FOB__c - Local_Total_Discount__c + Local_Total_Freight__c + Local_Bulk_Tax__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Final Selling Price
Total Equipment Selling Price - Local Total Discount + Local Total Freight + Local Bulk Tax</inlineHelpText>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Selling_Total_Equip_Price_FOB__c</fullName>
        <description>Local Total Equipment Selling Price $
Rollup of quote line item Local Total Equipment Selling Price $</description>
        <inlineHelpText>Local Total Equipment Selling Price $
Rollup of quote line item Local Total Equipment Selling Price $</inlineHelpText>
        <label>Sub Total</label>
        <summarizedField>QuoteLineItem.Local_Selling_Total_Equip_Price_FOB__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Local_Selling_Total_F_L__c</fullName>
        <description>Local Total Freight Selling Price
Rollup of quote line item Local Total Freight Selling Price</description>
        <inlineHelpText>Local Total Freight Selling Price
Rollup of quote line item Local Total Freight Selling Price</inlineHelpText>
        <label>Local Total Freight Selling Price</label>
        <summarizedField>QuoteLineItem.Local_Selling_Total_F_L__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Local_Sub_Total_E_L_D_T_TF__c</fullName>
        <description>Local Total Equip+Freight Selling Price w Disc Minus Local Total Freight</description>
        <formula>Local_Total_Selling_Price_w_Logistics_Di__c -  Local_Total_Freight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Total Equip+Freight Selling Price w Disc Minus Local Total Freight</inlineHelpText>
        <label>Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Total_Discount__c</fullName>
        <description>Local Total Discount
[Local Total Equipment + Freight Discount] + Local Bulk Discount</description>
        <formula>ROUND(Local_Total_Selling_Discount__c + Local_Bulk_Discount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Total Discount
[Local Total Equipment + Freight Discount] + Local Bulk Discount</inlineHelpText>
        <label>Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Total_Freight__c</fullName>
        <description>Local Total Freight Selling Price + Local Bulk Freight</description>
        <formula>ROUND(Local_Selling_Total_F_L__c + Local_Bulk_Freight__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Total Freight Selling Price + Local Bulk Freight</inlineHelpText>
        <label>Total Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Total_Margin__c</fullName>
        <description>Local Total Margin
 [Local Total Equipment Selling Price - Local Total Discount + Local Total Freight + Local Bulk Tax] - ([Local Total Equipment + Freight Cost] + Local Bulk Freight + Local Bulk Tax)</description>
        <formula>Local_Grand_Total_E_D_F_T__c -  (Local_Equipment_With_F_L__c + Local_Bulk_Freight__c + Local_Bulk_Tax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Total Margin
 [Local Total Equipment Selling Price - Local Total Discount + Local Total Freight + Local Bulk Tax] - ([Local Total Equipment + Freight Cost] + Local Bulk Freight + Local Bulk Tax)</inlineHelpText>
        <label>Local Total Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Local_Total_Selling_Discount__c</fullName>
        <description>Local Total Equipment + Freight Discount
Rollup of quote line item Local Total Equipment + Freight Discount</description>
        <inlineHelpText>Local Total Equipment + Freight Discount
Rollup of quote line item Local Total Equipment + Freight Discount</inlineHelpText>
        <label>Local Total Equipment + Freight Discount</label>
        <summarizedField>QuoteLineItem.Local_Total_Selling_Discount__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Local_Total_Selling_Price_w_Logistics_Di__c</fullName>
        <description>Local Total Equip+Freight Selling Price w Discount
Rollup of quote line item Local Total Equip+Freight Selling Price w Disc</description>
        <inlineHelpText>Local Total Equip+Freight Selling Price w Discount
Rollup of quote line item Local Total Equip+Freight Selling Price w Disc</inlineHelpText>
        <label>Loc Total Equip+Freight Selling P w Disc</label>
        <summarizedField>QuoteLineItem.Local_Total_Selling_Price_w_Log_Disc__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Local_Total_Selling_Price_w_Logistics__c</fullName>
        <description>Local Total Equip +Freight Selling Price
Rollup of quote line item Local Total Equip +Freight Selling Price</description>
        <inlineHelpText>Local Total Equip +Freight Selling Price
Rollup of quote line item Local Total Equip +Freight Selling Price</inlineHelpText>
        <label>Local Total Equip +Freight Selling Price</label>
        <summarizedField>QuoteLineItem.Local_Total_Selling_Price_w_Logistics__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Logistics_COP_Reserve__c</fullName>
        <description>Rollup of quote line item Total COP Reserve $</description>
        <inlineHelpText>Rollup of quote line item Total COP Reserve $</inlineHelpText>
        <label>Total CO-OP Marketing Reserve $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Contingency__c</fullName>
        <description>Rollup of quote line item Total Contingency $</description>
        <inlineHelpText>Rollup of quote line item Total Contingency $</inlineHelpText>
        <label>Total Contingency $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Contractor_Markup__c</fullName>
        <description>Rollup of quote line item Total Contractor Markup $</description>
        <inlineHelpText>Rollup of quote line item Total Contractor Markup $</inlineHelpText>
        <label>Total Contractor Markup $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Extended_Warranty__c</fullName>
        <description>Rollup of quote line item Total Extended Warranty $</description>
        <inlineHelpText>Rollup of quote line item Total Extended Warranty $</inlineHelpText>
        <label>Total Extended Warranty $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Inspection__c</fullName>
        <description>Rollup of quote line item Total Inspection $</description>
        <inlineHelpText>Rollup of quote line item Total Inspection $</inlineHelpText>
        <label>Total Inspection $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Labor_Hours__c</fullName>
        <description>Rollup of quote line item Total Labor Hours $</description>
        <inlineHelpText>Rollup of quote line item Total Labor Hours $</inlineHelpText>
        <label>Total Labor Hours $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Maintenance_Visits__c</fullName>
        <description>Rollup of quote line item Total Maintenance Visits $</description>
        <inlineHelpText>Rollup of quote line item Total Maintenance Visits $</inlineHelpText>
        <label>Total Maintenance Visits $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Marketing__c</fullName>
        <description>Rollup of quote line item Total Marketing $</description>
        <inlineHelpText>Rollup of quote line item Total Marketing $</inlineHelpText>
        <label>Total Marketing $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Standard_Warranty__c</fullName>
        <description>Rollup of quote line item Total Standard Warranty $</description>
        <inlineHelpText>Rollup of quote line item Total Standard Warranty $</inlineHelpText>
        <label>Total Standard Warranty $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Training_Factory__c</fullName>
        <description>Rollup of quote line item Total Training Factory $</description>
        <inlineHelpText>Rollup of quote line item Total Training Factory $</inlineHelpText>
        <label>Total Training Factory $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Training_On_Site__c</fullName>
        <description>Rollup of quote line item Total Training On Site $</description>
        <inlineHelpText>Rollup of quote line item Total Training On Site $</inlineHelpText>
        <label>Total Training On Site $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Travel_Expenses__c</fullName>
        <description>Rollup of quote line item Total Travel Expenses $</description>
        <inlineHelpText>Rollup of quote line item Total Travel Expenses $</inlineHelpText>
        <label>Total Travel Expenses $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Warranty_Reserve__c</fullName>
        <description>Rollup of quote line item Total Warranty Reserve $</description>
        <inlineHelpText>Rollup of quote line item Total Warranty Reserve $</inlineHelpText>
        <label>Total Warranty Reserve $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Witness_Test__c</fullName>
        <description>Rollup of quote line item Total Witness Test $</description>
        <inlineHelpText>Rollup of quote line item Total Witness Test $</inlineHelpText>
        <label>Total Witness Test $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Approval_Comments__c</fullName>
        <label>Margin Approval Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Margin_Approval_Status__c</fullName>
        <label>Margin Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs Review</fullName>
                    <default>true</default>
                    <label>Needs Review</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_VRV_GM__c</fullName>
        <description>This field is used to display minimum Equipment Gross Margin of a VRV Product on the Quote Line Item.</description>
        <inlineHelpText>Only available for Admins</inlineHelpText>
        <label>Minimum VRV GM%</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Account_ID__c</fullName>
        <description>This field pulls the Opportunity Account ID onto Quote object</description>
        <formula>Opportunity.Account.Id</formula>
        <label>Quote_Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Account_Name__c</fullName>
        <description>This field pulls Quote Account name from Opportunity</description>
        <formula>Opportunity.Account.Name</formula>
        <label>Quote Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Opp_Region_Territory__c</fullName>
        <description>This field is created to display Opportunity Region Territory used in Approval Process email</description>
        <formula>Text(Opportunity.Region_Territory__c)</formula>
        <inlineHelpText>This field is created to display Opportunity Region Territory used in Approval Process email. Not for use in reports.</inlineHelpText>
        <label>Quote Opp Region-Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Opportunity_ID__c</fullName>
        <description>This Field is created to pull the Quote Opportunity ID onto Quote object.</description>
        <formula>OpportunityId</formula>
        <label>Quote_Opportunity_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Opportunity_Name__c</fullName>
        <description>The Purpose of creating this field is use this field in the Email Alert Templates on Quote.</description>
        <formula>Opportunity.Name</formula>
        <inlineHelpText>The Purpose of creating this field is use this field in the Email Alert Templates on Quote.
Do not Use for Reporting.</inlineHelpText>
        <label>Quote Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Status__c</fullName>
        <description>Submit for Approvals: This option will submit the quote for Reserve Approval, VRV Margin Approval and Total Margin Approval. (Only submit for approval when everything is ready) 
Accepted by Customer: This option will request Credit Release.</description>
        <inlineHelpText>Submit for Approvals: This option will submit the quote for Reserve Approval, VRV Margin Approval and Total Margin Approval. (Only submit for approval when everything is ready) 
Accepted by Customer: This option will request Credit Release.</inlineHelpText>
        <label>Quote Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Margin_Approval_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submit for Approvals</fullName>
                </value>
                <value>
                    <fullName>Presented to Customer</fullName>
                </value>
                <value>
                    <fullName>Accepted by Customer</fullName>
                </value>
                <value>
                    <fullName>Rejected by Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reserve_Approval_Status__c</fullName>
        <label>Reserve Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs Review</fullName>
                    <default>true</default>
                    <label>Needs Review</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reserve_Comments__c</fullName>
        <description>Please comment on any Reserves registered for this Opportunity.</description>
        <inlineHelpText>Please comment on any Reserves registered for this Opportunity.</inlineHelpText>
        <label>Reserve Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selling_Total_Equip_Price_FOB__c</fullName>
        <description>Total Equipment Selling Price $
Rollup of quote line item Total Equipment Selling Price $</description>
        <inlineHelpText>Total Equipment Selling Price $
Rollup of quote line item Total Equipment Selling Price $</inlineHelpText>
        <label>Sub Total</label>
        <summarizedField>QuoteLineItem.Selling_Total_Equip_Price_FOB__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Selling_Total_F_L__c</fullName>
        <description>Total Freight Selling Price $
Rollup of quote line item Total Freight Selling Price $</description>
        <inlineHelpText>Total Freight Selling Price $
Rollup of quote line item Total Freight Selling Price $</inlineHelpText>
        <label>Total Freight Selling Price $</label>
        <summarizedField>QuoteLineItem.Selling_Total_F_L__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sub_Total_E_L_D_T_TF__c</fullName>
        <description>Total Equip+Freight Selling Price w Disc Minus Total Freight</description>
        <formula>Total_Selling_Price_w_Logistics_Disc__c -  Total_Freight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Equip+Freight Selling Price w Disc Minus Total Freight</inlineHelpText>
        <label>Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Temp_Test_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delete this field after testing the approval process</description>
        <inlineHelpText>Delete this field after testing the approval process</inlineHelpText>
        <label>Temp Test Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Base_Equipment_Cost__c</fullName>
        <description>Total Base Equipment Cost $
Rollup of quote line item Total Base Equipment Cost $</description>
        <inlineHelpText>Total Base Equipment Cost $
Rollup of quote line item Total Base Equipment Cost $</inlineHelpText>
        <label>Total Base Equipment Cost $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Bulk_Freight__c</fullName>
        <description>Total Bulk Freight $</description>
        <formula>Bulk_Freight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Bulk Freight $</inlineHelpText>
        <label>Total Bulk Freight $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Bulk_Tax__c</fullName>
        <description>Total Bulk Tax $</description>
        <formula>Bulk_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Bulk Tax $</inlineHelpText>
        <label>Total Bulk Tax $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <description>Total Discount $
[Total Equipment + Freight Discount $] + Bulk Discount $</description>
        <formula>ROUND(Total_Selling_Discount__c +  Bulk_Discount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Discount $
[Total Equipment + Freight Discount $] + Bulk Discount $</inlineHelpText>
        <label>Total Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Domestic_Freight_Amt__c</fullName>
        <description>Total Domestic Freight Add $
Rollup of quote line item Total Domestic Freight Add $</description>
        <inlineHelpText>Total Domestic Freight Add $
Rollup of quote line item Total Domestic Freight Add $</inlineHelpText>
        <label>Total Domestic Freight Add $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Domestic_Freight_Pct_Amt__c</fullName>
        <description>Total Domestic Freight % $
Rollup of quote line item Total Domestic Freight % $</description>
        <inlineHelpText>Total Domestic Freight % $
Rollup of quote line item Total Domestic Freight % $</inlineHelpText>
        <label>Total Domestic Freight % $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Domestic_Freight__c</fullName>
        <description>Total Domestic Freight $
Rollup of quote line item Total Domestic Freight $</description>
        <inlineHelpText>Total Domestic Freight $
Rollup of quote line item Total Domestic Freight $</inlineHelpText>
        <label>Total Domestic Freight $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Equipment_Cost_w_Bulk__c</fullName>
        <description>Rollup of quote line item [Total Equipment + Freight Cost $] + Bulk Items</description>
        <formula>Equipment_With_F_L__c + Bulk_Freight__c + Bulk_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Rollup of quote line item [Total Equipment + Freight Cost $] + Bulk Items</inlineHelpText>
        <label>Total Equipment Cost w/ Freight &amp; Bulk $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Equipment_Price_FOB__c</fullName>
        <description>Total Equipment Cost $
Rollup of quote line item Total Equipment Cost $</description>
        <inlineHelpText>Total Equipment Cost $
Rollup of quote line item Total Equipment Cost $</inlineHelpText>
        <label>Total Equipment Cost $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Freight__c</fullName>
        <description>Total Freight Selling Price $ + Bulk Freight $</description>
        <formula>Round(Selling_Total_F_L__c +  Bulk_Freight__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Freight Selling Price $ + Bulk Freight $</inlineHelpText>
        <label>Total Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Logistics_Add_On__c</fullName>
        <description>Total Export Freight $
Rollup of quote line item Total Export Freight $</description>
        <inlineHelpText>Total Export Freight $
Rollup of quote line item Total Export Freight $</inlineHelpText>
        <label>Total Export Freight $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Margin_Percent__c</fullName>
        <description>Total Margin %
1 - ((Total Equipment + Freight Cost $ + Bulk Freight $ + Bulk Tax $) / [Total Equipment Selling Price $ - Total Discount $ + Total Freight $ + Bulk Tax $])</description>
        <formula>IF(Grand_Total_E_D_F_T__c = 0,0,1 - ((Equipment_With_F_L__c + Bulk_Freight__c + Bulk_Tax__c) / Grand_Total_E_D_F_T__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Margin %
1 - ((Total Equipment + Freight Cost $ + Bulk Freight $ + Bulk Tax $) / [Total Equipment Selling Price $ - Total Discount $ + Total Freight $ + Bulk Tax $])</inlineHelpText>
        <label>Total Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Margin__c</fullName>
        <description>Total Margin $
 [Total Equipment Selling Price $ - Total Discount $ + Total Freight $ + Bulk Tax $] - ([Total Equipment + Freight Cost $] + Bulk Freight $ + Bulk Tax $)</description>
        <formula>Grand_Total_E_D_F_T__c - (Equipment_With_F_L__c + Bulk_Freight__c + Bulk_Tax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Margin $
 [Total Equipment Selling Price $ - Total Discount $ + Total Freight $ + Bulk Tax $] - ([Total Equipment + Freight Cost $] + Bulk Freight $ + Bulk Tax $)</inlineHelpText>
        <label>Total Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Outsource_Add_On__c</fullName>
        <description>Total Commission $
Rollup of quote line item Total Commission $</description>
        <inlineHelpText>Total Commission $
Rollup of quote line item Total Commission $</inlineHelpText>
        <label>Total Commission $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Selling_Discount__c</fullName>
        <description>Total Equipment + Freight Discount $
Rollup of quote line item Total Equipment + Freight Discount $</description>
        <inlineHelpText>Total Equipment + Freight Discount $
Rollup of quote line item Total Equipment + Freight Discount $</inlineHelpText>
        <label>Total Equipment + Freight Discount $</label>
        <summarizedField>QuoteLineItem.Total_Selling_Discount__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Selling_Price_w_Logistics_Disc__c</fullName>
        <description>Total Equip+Freight Selling Price w Disc
Rollup of quote line item Total Equip+Freight Selling Price w Disc</description>
        <inlineHelpText>Total Equip+Freight Selling Price w Disc
Rollup of quote line item Total Equip+Freight Selling Price w Disc</inlineHelpText>
        <label>Total Equip+Freight Selling Price w Disc</label>
        <summarizedField>QuoteLineItem.Total_Selling_Price_w_Log_Disc__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Selling_Price_w_Logistics__c</fullName>
        <description>Total Equip + Freight Selling Price $
Rollup of quote line item Total Equip + Freight Selling Price $</description>
        <inlineHelpText>Total Equip + Freight Selling Price $
Rollup of quote line item Total Equip + Freight Selling Price $</inlineHelpText>
        <label>Total Equip + Freight Selling Price $</label>
        <summarizedField>QuoteLineItem.Total_Selling_Price_w_Logistics__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Service_Add_On__c</fullName>
        <description>Total Service $
Rollup of quote line item Total Service $</description>
        <inlineHelpText>Total Service $
Rollup of quote line item Total Service $</inlineHelpText>
        <label>Total Service $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>